--- a/beijingPM25.ipynb
+++ b/beijingPM25.ipynb
@@ -890,7 +890,7 @@
    "id": "5b3e3fe9-de32-43a9-94b5-b9e955d47a57",
    "metadata": {},
    "source": [
-    "#### REFERENCE: 11-lecture"
+    "#### REFERENCE: 11-lecture, SARIMA"
    ]
   },
   {
