--- a/vgsales.ipynb
+++ b/vgsales.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "d2eee078-02f4-4e1d-86a1-7f569118bd91",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "b33ec7bb-c55f-429b-b05c-068d54ba48fe",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        "9     26.93      0.63      0.28         0.47         28.31  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "d2aec92f-279d-4d2a-b93d-c13a8a0fc28a",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "d6026cfa-20b4-4a8a-ab5e-47db17c7739c",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "72900620-3d63-460f-ba82-26c941bbacc4",
    "metadata": {},
    "outputs": [
@@ -449,7 +449,7 @@
        "max       10.570000     82.740000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "2e3cb881-d77f-412b-a152-183e1b8c109a",
    "metadata": {},
    "outputs": [
@@ -473,7 +473,7 @@
        "       '3DO', 'GG', 'PCFX'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "d525e60f-746f-4955-b896-57561a19b6ca",
    "metadata": {},
    "outputs": [
@@ -496,7 +496,7 @@
        "       'Strategy'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "368d28e3-22f2-4671-82d5-f9b0d4a9030b",
    "metadata": {},
    "outputs": [
@@ -521,7 +521,7 @@
        "       1980., 1983., 2020., 2017.])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "b63c086c-72c3-4129-89a1-e210d615c3ee",
    "metadata": {},
    "outputs": [
@@ -597,7 +597,7 @@
        "5      4.22         0.58         30.26  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "fb143dd2-4f84-440d-885d-b4608ff7dcb4",
    "metadata": {},
    "outputs": [
@@ -745,7 +745,7 @@
        "16127          0.01  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "7b29c624-77a4-4b8f-a0d6-79dbbcf87308",
    "metadata": {},
    "outputs": [
@@ -822,7 +822,7 @@
        "4     11.27      8.89     10.22          1.0         31.37  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "260a0a85-ad20-4020-9576-0c8e1fc11854",
    "metadata": {},
    "outputs": [
@@ -930,7 +930,7 @@
        "1   Nintendo     29.08      3.58      6.81         0.77         40.24  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "7b12a2e8-7b05-4bb3-90d4-57a2a910aa84",
    "metadata": {},
    "outputs": [
@@ -1006,7 +1006,7 @@
        "0      3.77         8.46         82.74  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "b04d2e8a-c3e2-4af6-9e8a-3750b17a6734",
    "metadata": {},
    "outputs": [
@@ -1114,7 +1114,7 @@
        "3     11.01      3.28         2.96         33.00  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "f9884e18-7bf2-496f-85d0-d945e5b425a8",
    "metadata": {},
    "outputs": [
@@ -1190,7 +1190,7 @@
        "0      3.77         8.46         82.74  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "7aa1f808-546f-4e2e-85bf-8d3dfeab5c7d",
    "metadata": {},
    "outputs": [
@@ -1374,7 +1374,7 @@
        "0      3.77         8.46         82.74  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "864fef8b-06cc-439c-9682-b3ad73819c63",
    "metadata": {},
    "outputs": [
@@ -1482,7 +1482,7 @@
        "2     12.88      3.79         3.31         35.82  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1493,8 +1493,393 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "dcddf054-27f3-44af-9fad-97a2daaeaa0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Publisher\n",
+       "Nintendo                       1786.56\n",
+       "Electronic Arts                1110.32\n",
+       "Activision                      727.46\n",
+       "Sony Computer Entertainment     607.50\n",
+       "Ubisoft                         474.72\n",
+       "                                ...   \n",
+       "Ongakukan                         0.01\n",
+       "Commseed                          0.01\n",
+       "Takuyo                            0.01\n",
+       "Boost On                          0.01\n",
+       "Naxat Soft                        0.01\n",
+       "Name: Global_Sales, Length: 578, dtype: float64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(\"Publisher\")[\"Global_Sales\"].sum().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "178def33-9252-40e1-b79c-ce746f0d5540",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Publisher\n",
+       "Nintendo                        455.42\n",
+       "Namco Bandai Games              127.07\n",
+       "Konami Digital Entertainment     91.30\n",
+       "Sony Computer Entertainment      74.10\n",
+       "Capcom                           68.08\n",
+       "                                 ...  \n",
+       "Jester Interactive                0.00\n",
+       "Jack of All Games                 0.00\n",
+       "Ivolgamus                         0.00\n",
+       "Introversion Software             0.00\n",
+       "responDESIGN                      0.00\n",
+       "Name: JP_Sales, Length: 578, dtype: float64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(\"Publisher\")[\"JP_Sales\"].sum().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "dc9a2113-8cfb-4c24-8a96-e24960068bc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(703)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df[\"Publisher\"] == \"Nintendo\"][\"Name\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "61da7520-b5d2-4948-ae86-131fae9e4096",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Publisher\n",
+       "Electronic Arts                 1351\n",
+       "Activision                       975\n",
+       "Namco Bandai Games               932\n",
+       "Ubisoft                          921\n",
+       "Konami Digital Entertainment     832\n",
+       "                                ... \n",
+       "Playmates                          1\n",
+       "Playmore                           1\n",
+       "Plenty                             1\n",
+       "Pony Canyon                        1\n",
+       "SCS Software                       1\n",
+       "Name: Name, Length: 578, dtype: int64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(\"Publisher\")[\"Name\"].count().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "999c1a04-d60d-4540-a6a3-4a601e18d01d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Platform\n",
+       "PS2     1255.64\n",
+       "X360     979.96\n",
+       "PS3      957.84\n",
+       "Wii      926.71\n",
+       "DS       822.49\n",
+       "PS       730.66\n",
+       "GBA      318.50\n",
+       "PSP      296.28\n",
+       "PS4      278.10\n",
+       "PC       258.82\n",
+       "XB       258.26\n",
+       "GB       255.45\n",
+       "NES      251.07\n",
+       "3DS      247.46\n",
+       "N64      218.88\n",
+       "SNES     200.05\n",
+       "GC       199.36\n",
+       "XOne     141.06\n",
+       "2600      97.08\n",
+       "WiiU      81.86\n",
+       "PSV       61.93\n",
+       "SAT       33.59\n",
+       "GEN       28.36\n",
+       "DC        15.97\n",
+       "SCD        1.87\n",
+       "NG         1.44\n",
+       "WS         1.42\n",
+       "TG16       0.16\n",
+       "3DO        0.10\n",
+       "GG         0.04\n",
+       "PCFX       0.03\n",
+       "Name: Global_Sales, dtype: float64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(\"Platform\")[\"Global_Sales\"].sum().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "3d18af4d-59c7-49ef-8dc0-8f95d5fe7704",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Platform\n",
+       "DS      2163\n",
+       "PS2     2161\n",
+       "PS3     1329\n",
+       "Wii     1325\n",
+       "X360    1265\n",
+       "PSP     1213\n",
+       "PS      1196\n",
+       "PC       960\n",
+       "XB       824\n",
+       "GBA      822\n",
+       "GC       556\n",
+       "3DS      509\n",
+       "PSV      413\n",
+       "PS4      336\n",
+       "N64      319\n",
+       "SNES     239\n",
+       "XOne     213\n",
+       "SAT      173\n",
+       "WiiU     143\n",
+       "2600     133\n",
+       "NES       98\n",
+       "GB        98\n",
+       "DC        52\n",
+       "GEN       27\n",
+       "NG        12\n",
+       "SCD        6\n",
+       "WS         6\n",
+       "3DO        3\n",
+       "TG16       2\n",
+       "PCFX       1\n",
+       "GG         1\n",
+       "Name: Name, dtype: int64"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(\"Platform\")[\"Name\"].count().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "b4690443-04a3-49ab-b1ad-ca07ec4fdcd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Platform_Count</th>\n",
+       "      <th>Global_Sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Grand Theft Auto V</td>\n",
+       "      <td>5</td>\n",
+       "      <td>55.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Super Mario Bros.</td>\n",
+       "      <td>2</td>\n",
+       "      <td>45.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tetris</td>\n",
+       "      <td>2</td>\n",
+       "      <td>35.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Call of Duty: Black Ops</td>\n",
+       "      <td>5</td>\n",
+       "      <td>31.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Call of Duty: Modern Warfare 3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>30.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2769</th>\n",
+       "      <td>Aquaman: Battle for Atlantis</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2770</th>\n",
+       "      <td>Akatsuki no Goei Trinity</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2771</th>\n",
+       "      <td>Sakura-Sou no Pet na Kanojo</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2772</th>\n",
+       "      <td>Grooverider: Slot Car Thunder</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2773</th>\n",
+       "      <td>Winning Post 7 Maximum 2008</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2774 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                Name  Platform_Count  Global_Sales\n",
+       "0                 Grand Theft Auto V               5         55.92\n",
+       "1                  Super Mario Bros.               2         45.31\n",
+       "2                             Tetris               2         35.84\n",
+       "3            Call of Duty: Black Ops               5         31.03\n",
+       "4     Call of Duty: Modern Warfare 3               4         30.83\n",
+       "...                              ...             ...           ...\n",
+       "2769    Aquaman: Battle for Atlantis               2          0.02\n",
+       "2770        Akatsuki no Goei Trinity               2          0.02\n",
+       "2771     Sakura-Sou no Pet na Kanojo               2          0.02\n",
+       "2772   Grooverider: Slot Car Thunder               2          0.02\n",
+       "2773     Winning Post 7 Maximum 2008               2          0.02\n",
+       "\n",
+       "[2774 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "most_sold_games = (df.groupby(\"Name\")\n",
+    "    .agg(Platform_Count=(\"Platform\", \"nunique\"),Global_Sales=(\"Global_Sales\", \"sum\")\n",
+    "        )\n",
+    "    .query(\"Platform_Count > 1\")\n",
+    "    .sort_values(\"Global_Sales\", ascending=False)\n",
+    "    .reset_index()\n",
+    "                  )\n",
+    "\n",
+    "most_sold_games"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "e7b26858-6b23-4499-ba78-c38adf95226a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['NES', 'GB'], dtype=object)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df[\"Name\"] == \"Super Mario Bros.\", \"Platform\"].unique()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57637ad9-6e08-4b39-afeb-6ffe2ff7b6c4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1516,7 +1901,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
